made good progress, need expand/collapse toggler, configurable title, better icons/title alignment

--- a/devinmajordotcom/Content/cover2.css
+++ b/devinmajordotcom/Content/cover2.css
@@ -73,7 +73,11 @@ a, a:hover, a:focus {
 
 .wrapper {
     display: flex;
-    align-items: stretch;
+    align-items:stretch;
+}
+
+#content {
+    width:100% !important;
 }
 
 #sidebar.active {
@@ -145,183 +149,6 @@ a[aria-expanded="true"]::before {
     content: '\e260';
 }
 
-/*.absolute-center {
-  margin: auto;
-  position: absolute;
-  top: 40vh; 
-  left: 0; 
-  bottom: 0; 
-  right: 0;
-}
-
-#nav1 {
-    position: absolute;
-    width: 60px;
-    height: 100%;
-    z-index: 1001;
-}
-#nav{
-    position:absolute;
-    top:0;
-    left:0;
-    width:0px;
-    height:100%;
-    z-index:100;
-    background:transparent;
-    color:#fff;
-    overflow:hidden;
-    z-index: 1002;
-}
-
-/*
-
-#nav ul{
-    margin:0;
-    padding:0;
-    width:200px;
-    margin:10px;
-    list-style:none;
-}
-#nav a span{
-    margin:0 10px 0 0;
-}
-#nav a{
-    color:#fff;
-    font-size:14px;
-    text-decoration:none;
-}
-
-*/
-
-.menu {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    background: -moz-linear-gradient(left, rgba(30,87,153,0) 0%, rgba(30,87,153,0.8) 15%, rgba(30,87,153,1) 19%, rgba(30,87,153,1) 20%, rgba(41,137,216,1) 50%, rgba(30,87,153,1) 80%, rgba(30,87,153,1) 81%, rgba(30,87,153,0.8) 85%, rgba(30,87,153,0) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(left, rgba(30,87,153,0) 0%,rgba(30,87,153,0.8) 15%,rgba(30,87,153,1) 19%,rgba(30,87,153,1) 20%,rgba(41,137,216,1) 50%,rgba(30,87,153,1) 80%,rgba(30,87,153,1) 81%,rgba(30,87,153,0.8) 85%,rgba(30,87,153,0) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to right, rgba(30,87,153,0) 0%,rgba(30,87,153,0.8) 15%,rgba(30,87,153,1) 19%,rgba(30,87,153,1) 20%,rgba(41,137,216,1) 50%,rgba(30,87,153,1) 80%,rgba(30,87,153,1) 81%,rgba(30,87,153,0.8) 85%,rgba(30,87,153,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001e5799', endColorstr='#001e5799',GradientType=1 ); /* IE6-9 */
-    -webkit-box-shadow: inset -10px 0px 15px 3px rgba(0,0,0,0.7);
-    -moz-box-shadow: inset -10px 0px 15px 3px rgba(0,0,0,0.7);
-    box-shadow: inset -10px 0px 15px 3px rgba(0,0,0,0.7);
-}
-.menu li a{
-    display:block;
-    height:5em;
-    width:5em;
-    text-indent:-500em;
-    line-height:5em;
-    text-align:center;
-    color: white;
-    background: transparent;
-    position: relative;
-    transition: background 0.3s ease-in-out;
-}
-.menu li a:before {
-  font-family: FontAwesome;
-  speak: none;
-  text-indent: 0em;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  font-size: 1.4em;
-}
-.menu li a.search:before {
-  content: "\f002";
-}
-.menu li a.archive:before {
-  content: "\f187";
-}
-.menu li a.pencil:before {
-  content: "\f040";
-}
-.menu li a.contact:before {
-  content: "\f003";
-}
-.menu li a.about:before {
-  content: "\f007";
-}
-.menu li a.home:before {
-  content: "\f015";
-}
-.menu li a:hover{
-  /*border: 1px solid white;
-    border-radius: 2.5px;*/
-  color: black;
-    -webkit-transition: all 0.3s ease-in;
-    transition: all 0.3s ease-in;
-}
-.menu li.current a {
-  background: #ff5e5e;
-  color: #fff;
-}
-.menu li a.active {
-  background: black;
-  color: white;
-    opacity: 0.8;
-}
-.menu li a.active:after{
-    position:absolute;
-    left:5em;
-    top:0;
-    content:"";
-    border:2.5em solid transparent;
-    border-left-color:black;
-    border-width: 2.5em 1em;
-    z-index:1006;
-}
-.menu li a:hover:after{
-    position:absolute;
-    left:5em;
-    top:0;
-    content:"";
-    border:2.5em solid transparent;
-    border-left-color:black;
-    border-width: 2.5em 1em;
-    z-index:1006;
-}
-.menu li{
-    position:relative;
-}
-.menu li:after{
-    content: attr(title);
-    position:absolute;
-    left:5em;
-    top:0;
-    height:5em;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    background: #1e5799; /* Old browsers */
-    background: -moz-linear-gradient(top, #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
-    border-radius: 5px;
-    padding:2em;
-    transition: all 0.3s ease-in-out;
-    visibility:hidden;
-    opacity:0;
-    -webkit-box-shadow: inset 10px 0px 35px 3px rgba(0,0,0,0.5);
-    -moz-box-shadow: inset 10px 0px 35px 3px rgba(0,0,0,0.5);
-    box-shadow: inset 10px 0px 35px 3px rgba(0,0,0,0.5);
-    z-index:1004;
-}
-.menu li:hover:after{
-    visibility:visible;
-    opacity:1;
-}
-@media screen and (max-height: 34em){
-  .menu li{
-    font-size:70%;
-  }
-}
 
 .hiddenSidebar {
     left:0px !important;
