--- a/devinmajordotcom/Views/MediaDashboard/Index.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/Index.cshtml
@@ -6,17 +6,39 @@
 
 <div class="wrapper">
 
-    <nav id="sidebar">
+    <nav id="sidebar" class="active">
 
         <!-- Sidebar Header -->
         <div class="sidebar-header">
-            <h3>Collapsible Sidebar</h3>
-            <strong>BS</strong>
+            <h3>
+                Collapsible Sidebar
+                <button type="button" class="btn btn-info navbar-btn sidebarCollapse" style="display:inline;">
+                    <span class="glyphicon glyphicon-fullscreen"></span>
+                </button>
+            </h3>
+            <strong>
+                <button type="button" class="btn btn-info navbar-btn sidebarCollapse" style="display:inline;">
+                    <span class="glyphicon glyphicon-fullscreen"></span>
+                </button>
+            </strong>
         </div>
 
         <!-- Sidebar Links -->
-        <ul class="list-unstyled components">
-            <li class="active">
+        <ul class="list-unstyled components menu">
+
+            @if (Model.SidebarLinks.Count > 0)
+            {
+                foreach (var sidebarLink in Model.SidebarLinks.Where(x => x.IsEnabled))
+                {
+                    <li @if(sidebarLink.IsDefault) {<text>class="active"</text>}>
+                        <a href="#" data-framename="@sidebarLink.ID">
+                            <i class="fa @sidebarLink.DisplayIcon"></i>
+                            @sidebarLink.DisplayName
+                        </a>
+                    </li>
+                }
+            }
+            @*<li class="active">
                 <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">
                     <i class="glyphicon glyphicon-home"></i>
                     Home
@@ -48,31 +70,41 @@
                     <i class="glyphicon glyphicon-send"></i>
                     Contact
                 </a>
-            </li>
+            </li>*@
         </ul>
 
     </nav>
 
     <div id="content">
-        <div >
-            &nbsp;&nbsp;
-            <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn" style="display:inline;">
-                <span class="glyphicon glyphicon-th-list"></span>
-            </button>
-            &nbsp;&nbsp;
-            <h4 style="display:inline;">dfsdfsdfsdfsdffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff</h4>
-        </div>
-        <br/>
-        <iframe src="@Model.SidebarLinks[0].URL"
-                style="width: 100%; height: 99.5vh; z-index: -1; border: none; "
-                id="@Model.SidebarLinks[0].ID"
-                scrolling="auto"
-                sandbox="allow-forms allow-same-origin allow-pointer-lock allow-scripts allow-popups allow-modals"
-                allowfullscreen="true"
-                webkitallowfullscreen="true"
-                class="z-iframe"
-                frameborder="0">
-        </iframe>
+        @if (Model.SidebarLinks.Count > 0)
+        {
+            var count = 0;
+            foreach (var link in Model.SidebarLinks.Where(x => x.IsEnabled))
+            {
+                if (link.URL != null)
+                {
+                    <iframe src="@Model.SidebarLinks[count].URL"
+                            style="width: 100%; height: 99.4vh; z-index: -1; border: none; @if(!Model.SidebarLinks[count].IsDefault) { <text>display:none;</text> }"
+                            id="@Model.SidebarLinks[count].ID"
+                            scrolling="auto"
+                            sandbox="allow-forms allow-same-origin allow-pointer-lock allow-scripts allow-popups allow-modals"
+                            allowfullscreen="true"
+                            webkitallowfullscreen="true"
+                            class="z-iframe"
+                            frameborder="0"></iframe>
+                }
+                else
+                {
+                    //TODO: Add something here, preferably make use of Controller/Action variables
+                }
+                count++;
+            }
+        }
+        else
+        {
+            @Html.Partial("../Shared/Error", new HandleErrorInfo(new Exception(), "MediaDashboard", "Index"))
+        }
+
     </div>
 </div>
 
@@ -100,42 +132,4 @@
         }
 
     </ul>
-</div>
-
-@if (Model.SidebarLinks.Count > 0)
-{ 
-    <div id="nav1"></div>
-}
-        
-<div id="site-wrapper" class="site-wrapper">
-    <h4>Welcome to <b>Devin Major's Media Server!</b> Touch or hover over the left of the browser for the menu.</h4>
-
-    @if (Model.SidebarLinks.Count > 0)
-    {
-        foreach (var link in Model.SidebarLinks.Where(x => x.IsEnabled))
-        {
-            if (link.URL != null)
-            {
-                <iframe 
-                        src="@link.URL"
-                        style="width: 100%; height: 95vh; position: relative; z-index: -1; border: none; @if(!link.IsDefault) { <text>display:none;</text> }"
-                        id="@link.ID"
-                        scrolling="auto"
-                        sandbox="allow-forms allow-same-origin allow-pointer-lock allow-scripts allow-popups allow-modals"
-                        allowfullscreen="true"
-                        webkitallowfullscreen="true"
-                        class="z-iframe"
-                        frameborder="0">
-                </iframe>
-            }
-            else
-            {
-                //TODO: Add something here, preferably make use of Controller/Action variables
-            }
-        }
-    }
-    else
-    {
-        @Html.Partial("../Shared/Error", new HandleErrorInfo(new Exception(), "MediaDashboard", "Index"))
-    }
 </div>*@
