--- a/devinmajordotcom/Content/cover2.css
+++ b/devinmajordotcom/Content/cover2.css
@@ -4,6 +4,114 @@
 
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
+
+.menu li a:before {
+  font-family: FontAwesome;
+  speak: none;
+  text-indent: 0em;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 1.4em;
+}
+.menu li a.search:before {
+  content: "\f002";
+}
+.menu li a.archive:before {
+  content: "\f187";
+}
+.menu li a.pencil:before {
+  content: "\f040";
+}
+.menu li a.contact:before {
+  content: "\f003";
+}
+.menu li a.about:before {
+  content: "\f007";
+}
+.menu li a.home:before {
+  content: "\f015";
+}
+.menu li a:hover{
+  /*border: 1px solid white;
+    border-radius: 2.5px;*/
+  color: black;
+    -webkit-transition: all 0.3s ease-in;
+    transition: all 0.3s ease-in;
+}
+.menu li.current a {
+  background: #ff5e5e;
+  color: #fff;
+}
+.menu li a.active {
+  background: black;
+  color: white;
+    opacity: 0.8;
+}
+.menu li a.active:after{
+    position:absolute;
+    left:5.3em;
+    top:0;
+    content:"";
+    border:2.5em solid transparent;
+    border-left-color:black;
+    border-width: 2.5em 1em;
+    z-index:1006;
+}
+.menu li a:hover:after{
+    position:absolute;
+    left:6.3em;
+    top:.2em;
+    content:"";
+    border:2.5em solid transparent;
+    border-left-color:black;
+    border-width: 2.5em 1em;
+    z-index:1006;
+}
+.menu li{
+    position:relative;
+}
+
+.menu li:after{
+    content: attr(data-newtitle);
+    position:absolute;
+    left:5.3em;
+    top:-.2em;
+    height:5em;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background: rgb(30,80,46); /* Old browsers */
+    background: -moz-linear-gradient(top, rgba(30,80,46,1) 0%, rgba(20,110,41,1) 50%, rgba(16,102,36,1) 51%, rgba(27,153,52,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(30,80,46,1) 0%,rgba(20,110,41,1) 50%,rgba(16,102,36,1) 51%,rgba(27,153,52,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(30,80,46,1) 0%,rgba(20,110,41,1) 50%,rgba(16,102,36,1) 51%,rgba(27,153,52,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e502e', endColorstr='#1b9934',GradientType=0 ); /* IE6-9 */
+    border-radius: 5px;
+    padding:2em;
+    transition: all 0.3s ease-in-out;
+    visibility:hidden;
+    opacity:0;
+    -webkit-box-shadow: inset 10px 0px 35px 3px rgba(0,0,0,0.5);
+    -moz-box-shadow: inset 10px 0px 35px 3px rgba(0,0,0,0.5);
+    box-shadow: inset 10px 0px 35px 3px rgba(0,0,0,0.5);
+    z-index:1004;
+}
+.menu li:hover:after{
+    visibility:visible;
+    opacity:1;
+}
+@media screen and (max-height: 34em){
+  .menu li{
+    font-size:70%;
+  }
+}
+
+#sidebar.active .displayName {
+    display: none;
+}
+
 #sidebar.active ul li a {
     padding: 20px 10px;
     text-align: center;
@@ -63,7 +171,7 @@ a, a:hover, a:focus {
 
 #sidebar {
     /* don't forget to add all the previously mentioned styles here too */
-    background: #7386D5;
+    background: #000000;
     color: #fff;
     transition: all 0.3s;
     min-width: 250px;
@@ -89,7 +197,11 @@ a, a:hover, a:focus {
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #6d7fcc;
+    background: rgb(30,80,46); /* Old browsers */
+    background: -moz-linear-gradient(top, rgba(30,80,46,1) 0%, rgba(20,110,41,1) 50%, rgba(16,102,36,1) 51%, rgba(27,153,52,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(30,80,46,1) 0%,rgba(20,110,41,1) 50%,rgba(16,102,36,1) 51%,rgba(27,153,52,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(30,80,46,1) 0%,rgba(20,110,41,1) 50%,rgba(16,102,36,1) 51%,rgba(27,153,52,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e502e', endColorstr='#1b9934',GradientType=0 ); /* IE6-9 */
 }
 
 #sidebar ul.components {
@@ -109,13 +221,17 @@ a, a:hover, a:focus {
     text-align:left;
 }
 #sidebar ul li a:hover {
-    color: #7386D5;
+    color: green;
     background: #fff;
 }
 
 #sidebar ul li.active > a, a[aria-expanded="true"] {
     color: #fff;
-    background: #6d7fcc;
+    background: rgb(30,80,46); /* Old browsers */
+    background: -moz-linear-gradient(top, rgba(30,80,46,1) 0%, rgba(20,110,41,1) 50%, rgba(16,102,36,1) 51%, rgba(27,153,52,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(30,80,46,1) 0%,rgba(20,110,41,1) 50%,rgba(16,102,36,1) 51%,rgba(27,153,52,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(30,80,46,1) 0%,rgba(20,110,41,1) 50%,rgba(16,102,36,1) 51%,rgba(27,153,52,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e502e', endColorstr='#1b9934',GradientType=0 ); /* IE6-9 */
 }
 ul ul a {
     font-size: 0.9em !important;
