--- a/devinmajordotcom/Views/MediaDashboard/_NewLink.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/_NewLink.cshtml
@@ -1,21 +1,20 @@
 ﻿<script type="text/x-handlebars-template" id="mediaDashboardLinkTemplateScript">
 
-    <input data-val="false" data-val-number="The field ID must be a number." data-val-required="The ID field is required." id="SidebarLinks_{{newLinkCounter}}__ID" name="SidebarLinks[{{newLinkCounter}}].ID" type="hidden" value="{{newLinkCounter}}" style="">
-    <input data-val="true" data-val-number="The field ParentApplicationId must be a number." data-val-required="The ParentApplicationId field is required." id="SidebarLinks_{{newLinkCounter}}__ParentApplicationId" name="SidebarLinks[{{newLinkCounter}}].ParentApplicationId" type="hidden" value="3" style="">
-    <input id="SidebarLinks_{{newLinkCounter}}__ParentApplicationName" name="SidebarLinks[{{newLinkCounter}}].ParentApplicationName" type="hidden" value="Plex Media Dashboard" style="">
+    <input class="newLinkInput hiddenID hiddenInput_{{newLinkCounter}}" data-val="true" data-val-number="The field ID must be a number." data-val-required="The ID field is required." id="SidebarLinks_{{newID}}__ID" name="SidebarLinks[{{newID}}].ID" type="hidden" value="{{newLinkCounter}}" style="">
+    <input class="newLinkInput hiddenInput_{{newLinkCounter}}" data-val="true" data-val-number="The field ParentApplicationId must be a number." data-val-required="The ParentApplicationId field is required." id="SidebarLinks_{{newID}}__ParentApplicationId" name="SidebarLinks[{{newID}}].ParentApplicationId" type="hidden" value="3" style="">
+    <input class="newLinkInput hiddenInput_{{newLinkCounter}}" id="SidebarLinks_{{newID}}__ParentApplicationName" name="SidebarLinks[{{newID}}].ParentApplicationName" type="hidden" value="Plex Media Dashboard" style="">
 
     <li class="mediaDashboardLink" style="padding-top: 10px; margin-bottom: 2vh;">
         <div class="row">
             <div class="col-sm-2">
-                <span class="btn btn-primary move ui-sortable-handle" type="button"><span class="fa fa-arrows"></span></span>
+                <span class="btn btn-primary move" type="button"><span class="fa fa-arrows"></span></span>
             </div>
             <div class="col-sm-8 text-center">
                 <h4>
-                    <span class="fa "></span>
                 </h4>
             </div>
             <div class="col-sm-2">
-                <button style="float: right;" class="btn btn-danger deleteGroup" id="remScnt" type="button"><span class="fa fa-trash"></span></button>
+                <a class="newLinkInput btn btn-danger deleteGroup deleteMediaLink" data-ajax="true" data-ajax-failure="ManageMediaAjaxFailure" data-ajax-method="GET" data-ajax-success="RemoveMediaLink('#deleteLink_{{newLinkCounter}}')" data-content="<span class='fa fa-trash'></span>" href="/MediaDashboard/RemoveMediaDashboardLink/{{newLinkCounter}}" id="deleteLink_{{newLinkCounter}}" style="float:right;"><span class="fa fa-trash"></span></a>
             </div>
         </div>
         <br>
@@ -23,15 +22,15 @@
             <div class="col-sm-6 text-center">
                 <div style="margin-bottom: 8px" class="input-group">
                     <span class="input-group-btn">
-                        <button data-placement="left" class="btn btn-default iconpicker" name="SidebarLinks[{{newLinkCounter}}].DisplayIcon" role="iconpicker" data-iconset="fontawesome" data-icon="" type="button"><i class="fa "></i><input type="hidden" name="SidebarLinks[{{newLinkCounter}}].DisplayIcon" value=""><span class="caret"></span></button>
+                        <button data-placement="left" class="newLinkInput btn btn-default iconpicker" name="SidebarLinks[{{newID}}].DisplayIcon" role="iconpicker" data-iconset="fontawesome" data-icon="" type="button" data-original-title="" title=""><i class="fa fa-cut"></i><input type="hidden" class="newLinkInput" name="SidebarLinks[{{newID}}].DisplayIcon" value=""><span class="caret"></span></button>
                     </span>
-                    <input class="form-control namer" id="SidebarLinks_{{newLinkCounter}}__DisplayName" name="SidebarLinks[{{newLinkCounter}}].DisplayName" placeholder="Display Name" style="margin-bottom: 0px" type="text" value="">
+                    <input class="newLinkInput form-control namer valid" id="SidebarLinks_{{newID}}__DisplayName" name="SidebarLinks[{{newID}}].DisplayName" placeholder="Display Name" style="margin-bottom: 0px" type="text" value="" aria-invalid="false">
                 </div>
             </div>
             <div class="col-sm-6 text-center">
                 <div style="margin-bottom: 8px" class="input-group">
                     <div class="input-group-addon">URL</div>
-                    <input class="form-control" id="SidebarLinks_{{newLinkCounter}}__URL" name="SidebarLinks[{{newLinkCounter}}].URL" placeholder="http://www.google.ca/" style="margin-bottom: 0px" type="text" value="">
+                    <input class="newLinkInput form-control" id="SidebarLinks_{{newID}}__URL" name="SidebarLinks[{{newID}}].URL" placeholder="http://www.google.ca/" style="margin-bottom: 0px" type="text" value="">
                 </div>
             </div>
         </div>
@@ -41,10 +40,10 @@
                 <div class="form-group">
                     <div class="checkbox-inline">
                         <label class="switch">
-                            <input class="check-box" data-val="true" data-val-required="The IsDefault field is required." id="SidebarLinks_{{newLinkCounter}}__IsDefault" name="SidebarLinks[{{newLinkCounter}}].IsDefault" type="checkbox" value="True"><input name="SidebarLinks[{{newLinkCounter}}].IsDefault" type="hidden" value="false">
+                            <input class="newLinkInput check-box" data-val="true" data-val-required="The IsDefault field is required." id="SidebarLinks_{{newID}}__IsDefault" name="SidebarLinks[{{newID}}].IsDefault" type="checkbox" value="true"><input class="newLinkInput" name="SidebarLinks[{{newID}}].IsDefault" type="hidden" value="false">
                             <div class="slider round"></div>
                         </label>
-                        <label for="SidebarLinks_{{newLinkCounter}}__IsDefault" style="font-weight: normal; margin-bottom: 0px;">Is Default Link?</label>
+                        <label class="newLinkInput" for="SidebarLinks_{{newID}}__IsDefault" style="font-weight: normal; margin-bottom: 0px;">Is Default Link?</label>
                     </div>
                 </div>
             </div>
@@ -52,19 +51,17 @@
                 <div class="form-group">
                     <div class="checkbox-inline">
                         <label class="switch">
-                            <input checked="checked" class="check-box" data-val="true" data-val-required="The IsEnabled field is required." id="SidebarLinks_{{newLinkCounter}}__IsEnabled" name="SidebarLinks[{{newLinkCounter}}].IsEnabled" type="checkbox" value="true"><input name="SidebarLinks[{{newLinkCounter}}].IsEnabled" type="hidden" value="false">
+                            <input checked="checked" class="newLinkInput check-box" data-val="true" data-val-required="The IsEnabled field is required." id="SidebarLinks_{{newID}}__IsEnabled" name="SidebarLinks[{{newID}}].IsEnabled" type="checkbox" value="true"><input class="newLinkInput" name="SidebarLinks[{{newID}}].IsEnabled" type="hidden" value="false">
                             <div class="slider round"></div>
                         </label>
-                        <label for="SidebarLinks_{{newLinkCounter}}__IsEnabled" style="font-weight: normal; margin-bottom: 0px;">Is Link Enabled?</label>
+                        <label class="newLinkInput" for="SidebarLinks_{{newID}}__IsEnabled" style="font-weight: normal; margin-bottom: 0px;">Is Link Enabled?</label>
                     </div>
                 </div>
             </div>
-
         </div>
-
         <div class="row">
             <div class="col-sm-12 text-center">
-                <span class="field-validation-valid" data-valmsg-for="SidebarLinks[{{newLinkCounter}}].DisplayName" data-valmsg-replace="true"></span>
+                <span class="field-validation-valid" data-valmsg-for="SidebarLinks[{{newID}}].DisplayName" data-valmsg-replace="true"></span>
             </div>
         </div>
     </li>
