updating moment, added datepicker. needs lots of work

--- a/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
+++ b/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
@@ -106,7 +106,7 @@
                             @Html.LabelFor(x => x.ProfileDetails.DateOfBirth)
                         </div>
                         <div class="col-sm-6">
-                            @Html.TextBoxFor(x => x.ProfileDetails.DateOfBirth, new { @class = "form-control" })
+                            @Html.TextBoxFor(x => x.ProfileDetails.DateOfBirth, new { @class = "form-control date" })
                         </div>
                     </div>
                     <div class="row">
