--- a/devinmajordotcom/Content/templatemo-style2.css
+++ b/devinmajordotcom/Content/templatemo-style2.css
@@ -39,7 +39,7 @@ http://www.templatemo.com/tm-509-hydro
   }
 
   h2 {
-    color: #393939;
+    color: white;
     font-size: 2em;
   }
 
@@ -138,10 +138,6 @@ http://www.templatemo.com/tm-509-hydro
   }
 
   .overlay {
-    background: #00F260;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #0575E6, #00F260);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #0575E6, #00F260); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    opacity: 0.7;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -327,7 +323,7 @@ http://www.templatemo.com/tm-509-hydro
   -----------------------------------------*/
 
   #home {
-    background: url('HomeImages/home-bg.jpg') no-repeat center center;
+    background: url('HomeImages/home-bg4.jpg') no-repeat center center;
     background-size: cover;
     vertical-align: middle;
     display: -webkit-box;
