--- a/devinmajordotcom/Views/MyHome/Index.cshtml
+++ b/devinmajordotcom/Views/MyHome/Index.cshtml
@@ -5,28 +5,26 @@
 <!-- HOME -->
 <section id="home" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
-    <div class="container">
+    <div class="container" style="">
         <div class="row">
-
-            <div class="col-md-6 col-sm-12">
-                <div class="home-info">
-                    <h1>We make beautiful websites for all people.</h1>
-                    <a href="#about" class="btn section-btn smoothScroll">Start a project</a>
-                    <span>
-                        CALL US (+66) 010-020-0340
-                        <small>For any inquiry</small>
-                    </span>
-                </div>
+            
+            <div class="col-sm-12 text-center">
+                <h2>Welcome Home, Devin!</h2>
             </div>
-
-            <div class="col-md-6 col-sm-12">
-                <div class="home-video">
-                    <div class="embed-responsive embed-responsive-16by9">
-                    </div>
-                </div>
+            <div class="col-sm-12 text-center">
+                It is currently 2:40PM, on Saturday December 12th, 2017.
             </div>
 
         </div>
+
+        <div id="spacerDiv" style="min-height: 65vh;"></div>
+
+        <div class="row" style="">
+            <div class="col-sm-12 text-center">
+                <p>Weather widget thing will go here</p>
+            </div>
+        </div>
+
     </div>
 </section>
 
@@ -201,7 +199,7 @@
 
                         <div class="col-md-12 col-sm-12">
                             <div class="modal-title">
-                                <h2>Hydro Co</h2>
+                                <h2>MyHome</h2>
                             </div>
 
                             <!-- NAV TABS -->
