--- a/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
+++ b/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <title>Hydro - Landing Page Template</title>
+    <title>MyHome</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="description" content="">
@@ -35,23 +35,18 @@
             </button>
 
             <!-- lOGO TEXT HERE -->
-            <a href="index.html" class="navbar-brand">Hydro</a>
+            <a href="index.html" class="navbar-brand">MyHome</a>
         </div>
 
         <!-- MENU LINKS -->
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-nav-first">
                 <li><a href="#home" class="smoothScroll">Home</a></li>
-                <li><a href="#about" class="smoothScroll">About</a></li>
-                <li><a href="#blog" class="smoothScroll">Blog</a></li>
-                <li><a href="#work" class="smoothScroll">Our Work</a></li>
-                <li><a href="#contact" class="smoothScroll">Contacts</a></li>
+                <li><a href="#blog" class="smoothScroll">Blog & Notes</a></li>
+                <li><a href="#work" class="smoothScroll">Favorites & Bookmarks</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                 <li class="section-btn"><a href="#" data-toggle="modal" data-target="#modal-form">Sign in / Join</a></li>
             </ul>
         </div>
