--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@using devinmajordotcom.ViewModels;
 @{
-    var viewModel = ViewBag.CurrentUserViewModel;
+    var viewModel = (UserViewModel)ViewBag.CurrentUserViewModel;
 }
 <!DOCTYPE html>
 <html lang="en">
